--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "puppeteer": "^24.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
