--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
-    "puppeteer": "^24.4.0"
+    "puppeteer": "^24.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
