--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "generic-pool": "^3.9.0",
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0",
-    "puppeteer": "^24.4.0",
+    "nodemailer": "^6.10.1",
+    "puppeteer": "^24.9.0",
     "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
   },
