--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
+  "proxy": "https://servicepbackend.insideoutprojects.in",
   "keywords": [],
   "author": "",
   "license": "ISC",
