--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
@@ -27,7 +28,7 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
-    "puppeteer": "^24.10.0",
+    "puppeteer": "^24.10.2",
     "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
   },
