--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
+    "phantomjs-prebuilt": "^2.1.16",
     "puppeteer": "^24.10.2",
     "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
