--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "generic-pool": "^3.9.0",
     "googleapis": "^150.0.1",
