--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "puppeteer": "^24.10.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
