--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "googleapis": "^150.0.1",
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
